directory listing using std::experimental::filesystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required (VERSION 2.6)
 project (facedetect)
 
-find_package( OpenCV REQUIRED )
+find_package(OpenCV REQUIRED)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules/)
 
+set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14 -Wall -W -pedantic -g")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -W -pedantic -g")
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 
-include_directories ( include )
+
+include_directories(include)
 
 # detection
 add_executable(detect entry_point/detect.cc
@@ -36,3 +38,4 @@ add_executable(test_io test/test_io.cc
 
 target_link_libraries(detect ${OpenCV_LIBS})
 target_link_libraries(train ${OpenCV_LIBS})
+target_link_libraries(train stdc++fs)
